--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -48,9 +48,6 @@ jobs:
           IMAGE_TAG: ${{ github.sha }}
         run: |
           # A unique number for each workflow run within a repository. This number does not change if you re-run the workflow run.
-          docker build -t ${{ env.ECR_REPOSITORY }}-${{ github.run_id }}
-          docker tag $REGISTRY/$REPOSITORY:latest
-          docker tag $REGISTRY/$REPOSITORY:$IMAGE_TAG
-          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
-          docker push $REGISTRY/$REPOSITORY:latest
+          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG -t $REGISTRY/$REPOSITORY:latest .
+          docker push --all-tags $REGISTRY/$REPOSITORY
           
