--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -4,6 +4,7 @@
 name: Python package
 
 on:
+  # only runs on PR
   pull_request:
     branches: [ "main" ]
 
@@ -13,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        # This ensures that the code works correctly across different Python versions and helps catch any version-specific issues or bugs.
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
 
     steps:
