--- a/.github/workflows/pylint.yaml
+++ b/.github/workflows/pylint.yaml
@@ -26,4 +26,4 @@ jobs:
         pip install pylint
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py')
+        pylint --fail-under 1 $(git ls-files '*.py')
