redeploy app step

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,8 +9,6 @@ env:
   AWS_REGION: eu-west-3
   # ECR configuration
   ECR_REPOSITORY: congenial-memory
-  # Registry prefix
-  ECR_REGISTRY_PREFIX: 303981612052.dkr.ecr.eu-west-3.amazonaws.com
   # ECS configuration
   ECS_SERVICE: congenial-memory-service
   ECS_CLUSTER: congenial-memory-cluster
@@ -45,7 +43,6 @@ jobs:
         id: login-ecr
         # Logs in the local Docker client to one or more Amazon ECR Private registries or an Amazon ECR Public registry.
         # https://github.com/aws-actions/amazon-ecr-login
-        # !!! If logging into multiple registries on ECR Private, this output will not be set.
         uses: aws-actions/amazon-ecr-login@v1
 
       - name: Build, tag, and push docker image to Amazon ECR
@@ -58,7 +55,7 @@ jobs:
         run: |
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG -t $REGISTRY/$REPOSITORY:latest .
           docker push --all-tags $REGISTRY/$REPOSITORY
-          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+          echo "image=$REGISTRY/$REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
         # We need to download the task definition of AWS ECS service that we've created earlier. Please note that we need to specify the family of task-definition
       - name: Download task definition
@@ -69,18 +66,13 @@ jobs:
 
       - name: Fill in the new image ID in the AWS ECS task definition
         id: task-def
-        # env:
-        #   REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        #   REPOSITORY: ${{ env.ECR_REPOSITORY }}
-        #   IMAGE_TAG: ${{ env.IMAGE_TAG }}
         # Inserts a container image URI into an Amazon ECS task definition JSON file.
         # https://github.com/aws-actions/amazon-ecs-render-task-definition
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: task-definition.json
           container-name: ${{ env.ECS_CONTAINER }}
-          #  "303981612052.dkr.ecr.eu-west-3.amazonaws.com/congenial-memory:latest"
-          image: ${{ env.ECR_REGISTRY_PREFIX }}${{ steps.build-image.outputs.image }}
+          image: ${{ steps.build-image.outputs.image }}
 
       - name: Deploy AWS ECS task definition
         # Registers an Amazon ECS task definition and deploys it to an ECS service.
